# clap_mwe

./: Cargo.toml  README.md  bundler.toml  readme.md
src/: lib.rs
src/dsp/: drives.rs  effects.rs  filters.rs  mod.rs
src/dsp/crossover/: fir.rs
