[package]
name = "dsp_playground"
version = "0.1.0"
edition = "2021"
authors = ["Kevin <hello@kevontheweb.net>"]
license = "closed source (source viewable)"
homepage = "https://example.com"
description = "An example plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }
parking_lot = "0.12"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
